--- a/src/pages/fr/blog/index.astro
+++ b/src/pages/fr/blog/index.astro
@@ -30,12 +30,12 @@ const mostRecentPost: CollectionEntry<"blog"> = blogPosts[0];
 const otherPosts: CollectionEntry<"blog">[] = blogPosts.slice(1);
 
 // Define variables for page content
-const title: string = "Votre Passerelle vers l'Excellence en Construction";
+const title: string = "Actualités MAFA";
 const subTitle: string =
-  "Explorez les dernières actualités, astuces et analyses de MAFA pour améliorer vos projets de construction. Des mises en avant de produits aux stratégies de gestion de projet, notre blog est votre ressource incontournable pour tout ce qui concerne les outils et la construction.";
+  "Explorez les dernières actualités, conseils et analyses de MAFA pour améliorer vos projets en restauration, nettoyage professionnel, logistique hôtelière, formation culinaire, transformation agroalimentaire et services stratégiques. Notre blog est votre ressource incontournable pour tout ce qui concerne nos six secteurs d'activité.";
 const secondTitle: string = "Perspectives";
 const secondSubTitle: string =
-  "Restez à jour avec les dernières tendances et évolutions de l'industrie de la construction grâce aux analyses de l'équipe d'experts de MAFA.";
+  "Restez à jour avec les dernières tendances et évolutions dans les secteurs de la restauration, du nettoyage professionnel, de la logistique hôtelière, de la formation culinaire, de la transformation agroalimentaire et des services stratégiques grâce aux analyses de l'équipe d'experts de MAFA.";
 
 const pageTitle: string = `Blog | ${SITE.title}`;
 const metaDescription =
