--- a/src/components/sections/navbar&footer/Navbar.astro
+++ b/src/components/sections/navbar&footer/Navbar.astro
@@ -2,7 +2,7 @@
 //Import relevant dependencies
 import ThemeIcon from "@components/ThemeIcon.astro";
 import NavLink from "@components/ui/links/NavLink.astro";
-import Authentication from "../misc/Authentication.astro";
+// import Authentication from "../misc/Authentication.astro";
 import enStrings from "@utils/navigation";
 import frStrings from "@utils/fr/navigation";
 import BrandLogo from "@components/BrandLogo.astro";
@@ -90,7 +90,9 @@ const homeUrl = Astro.currentLocale === "fr" ? "/fr" : "/";
           <NavLink url={link.url} name={link.name} />
         ))}
 
+        {/*
         <Authentication />
+        */}
         <LanguagePicker />
         <!-- ThemeIcon component specifically for larger screens -->
         <span class="hidden md:inline-block">
