--- a/src/pages/fr/index.astro
+++ b/src/pages/fr/index.astro
@@ -19,6 +19,7 @@ import formation2 from "@images/new/formation.png"
 import mafa from "@images/new/mafa.mp4";
 import formation from "@images/new/mafa1.jfif";
 import quality from "@images/new/mafa2.jfif";
+import QHSE from "@images/new/QHSE.jfif";
 import faqs from "@data/fr/faqs.json";
 import features from "@data/fr/features.json";
 import pricing from "@data/fr/pricing.json";
@@ -104,7 +105,7 @@ const avatarSrcs: Array<string> = [
         content:
           "Procédures QHSE rigoureuses, audits réguliers et formation continue pour garantir des standards internationaux dans tous nos secteurs d'activité.",
         svg: "house",
-        src: quality,
+        src: QHSE,
         alt: "Standards qualité MAFA",
         width: 1200,
         height: 800,
