--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,11 +15,13 @@ import forafricaJfif from "@images/new/forafrica.png";
 import nettoyage from "@images/new/nettoyage.png";
 import hotel from "@images/new/hotel.png"
 import formation2 from "@images/new/formation.png"
+
 import foodImage from "@images/new/food.png";
 import foodImage2 from "@images/new/food2.png";
 import mafa from "@images/new/mafa.mp4";
 import formation from "@images/new/mafa1.jfif";
 import quality from "@images/new/mafa2.jfif";
+import QHSE from "@images/new/QHSE.jfif";
 import faqs from "@data/faqs.json";
 import features from "@data/features.json";
 import pricing from "@data/pricing.json";
@@ -137,7 +139,7 @@ const localizedFeatures = features.map((feature) => {
           ? "Procédures QHSE rigoureuses, audits réguliers et formation continue pour garantir des standards internationaux dans tous nos secteurs d'activité."
           : "Rigorous QHSE procedures, regular audits, and continuous training to meet international standards across all our service sectors.",
         svg: "house",
-        src: quality,
+        src: QHSE,
         alt: isFrench ? "Standards qualité MAFA" : "MAFA quality standards",
         width: 1200,
         height: 800,
