--- a/src/components/sections/fr/ContactSection_fr.astro
+++ b/src/components/sections/fr/ContactSection_fr.astro
@@ -15,7 +15,7 @@ const subTitle: string =
 const formTitle: string = "Remplissez le formulaire ci-dessous";
 const formSubTitle: string =
   "Nous vous répondrons dans les meilleurs délais.";
-const whatsappNumber: string = "+226 70 00 00 00";
+const whatsappNumber: string = "+226 05 19 11 23";
 const whatsappNumberClean: string = whatsappNumber.replace(/\s/g, "");
 const whatsappURL: string = `https://wa.me/${whatsappNumberClean}`;
 ---
@@ -89,15 +89,15 @@ const whatsappURL: string = `https://wa.me/${whatsappNumberClean}`;
       <!--ContactIconBlocks are used to display different methods of contacting, including address, phone, and email.-->
       <div class="divide-y divide-neutral-300 dark:divide-neutral-700">
         <ContactIconBlock
-          heading="📍 Adresse"
+          heading="Adresse"
           content="MAFA"
           isAddressVisible={true}
-          addressContent="01 BP 0001 Ouagadougou 01, Burkina Faso"
+          addressContent="11 BP 3300 Ouagadougou , Burkina Faso"
           ><Icon name="mapPin" />
         </ContactIconBlock>
 
         <ContactIconBlock
-          heading="📞 Téléphone"
+          heading="Téléphone"
           content="Appelez-nous directement"
           isLinkVisible={true}
           linkTitle={whatsappNumber}
@@ -106,7 +106,7 @@ const whatsappURL: string = `https://wa.me/${whatsappNumberClean}`;
         </ContactIconBlock>
 
         <ContactIconBlock
-          heading="✉️ E-mail"
+          heading="E-mail"
           content="Envoyez-nous un e-mail à"
           isLinkVisible={true}
           linkTitle="contact@mafa-africa.com"
