--- a/src/components/sections/misc/ContactSection.astro
+++ b/src/components/sections/misc/ContactSection.astro
@@ -14,7 +14,7 @@ const subTitle: string =
   "For quotes, partnerships, or information, our team responds promptly.";
 const formTitle: string = "Request a proposal or information";
 const formSubTitle: string = "We reply as quickly as possible.";
-const whatsappNumber: string = "+226 70 00 00 00";
+const whatsappNumber: string = "+226 05 19 11 23";
 const whatsappNumberClean: string = whatsappNumber.replace(/\s/g, "");
 const whatsappURL: string = `https://wa.me/${whatsappNumberClean}`;
 ---
@@ -84,15 +84,15 @@ const whatsappURL: string = `https://wa.me/${whatsappNumberClean}`;
       <!--ContactIconBlocks are used to display different contact methods-->
       <div class="divide-y divide-neutral-300 dark:divide-neutral-700">
         <ContactIconBlock
-          heading="📍 Address"
+          heading="Address"
           content="MAFA"
           isAddressVisible={true}
-          addressContent="01 BP 0001 Ouagadougou 01, Burkina Faso"
+          addressContent="11 BP 3300 Ouagadougou , Burkina Faso"
           ><Icon name="mapPin" />
         </ContactIconBlock>
 
         <ContactIconBlock
-          heading="📞 Phone"
+          heading="Phone"
           content="Call us directly"
           isLinkVisible={true}
           linkTitle={whatsappNumber}
@@ -101,7 +101,7 @@ const whatsappURL: string = `https://wa.me/${whatsappNumberClean}`;
         </ContactIconBlock>
 
         <ContactIconBlock
-          heading="✉️ Email"
+          heading="Email"
           content="Prefer writing? Send us a message at"
           isLinkVisible={true}
           linkTitle="contact@mafa-africa.com"
