--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -20,6 +20,7 @@ import foodImage from "@images/new/food.png";
 import foodImage2 from "@images/new/food2.png";
 import mafa from "@images/new/mafa.mp4";
 import formation from "@images/new/mafa1.jfif";
+import mohamed from "@images/new/mohamed.jpeg";
 import quality from "@images/new/mafa2.jfif";
 import QHSE from "@images/new/QHSE.jfif";
 import faqs from "@data/faqs.json";
@@ -164,10 +165,10 @@ const localizedFeatures = features.map((feature) => {
           isFrench
             ? "“MAFA a structuré l’ensemble de notre restauration de base vie et assuré la conformité QHSE en un temps record. Leur flexibilité sur le terrain est remarquable.”"
             : "“MAFA structured our camp catering and delivered full QHSE compliance in record time. Their field flexibility is outstanding.”",
-        author: "Aïcha Traoré",
-        role: "Directrice des opérations | Groupe minier ouest-africain",
+        author: "Mohamed Traoré",
+        role: "Responsable logistique | Groupe minier sahélien",
         avatarSrc:
-          "https://images.unsplash.com/photo-1593104547489-5cfb3839a3b5?q=80&w=1453&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D8&auto=format&fit=facearea&facepad=2&w=320&h=320&q=80",
+          mohamed,
       },
     ]}
     statistics={[
