--- a/src/components/sections/testimonials/TestimonialsSection.astro
+++ b/src/components/sections/testimonials/TestimonialsSection.astro
@@ -1,6 +1,7 @@
 ---
 import TestimonialItem from "./TestimonialItem.astro";
 import StatsGrid from "../../ui/blocks/StatsGrid.astro";
+import type { ImageMetadata } from "astro";
 
 const {
   title,
@@ -21,7 +22,7 @@ type Testimonial = {
   content: string;
   author: string;
   role: string;
-  avatarSrc: string;
+  avatarSrc: string | ImageMetadata;
 };
 
 // TypeScript type for stats.
