--- a/src/pages/fr/index.astro
+++ b/src/pages/fr/index.astro
@@ -11,6 +11,7 @@ import PricingSection from "@components/sections/pricing/PricingSection.astro";
 import FAQ from "@components/sections/misc/FAQ.astro";
 import heroImage from "@images/marmite.png";
 import forafricain from "@images/new/africa.png";
+import mohamed from "@images/new/mohamed.jpeg";
 import forafricaJfif from "@images/new/forafrica.png";
 import foodImage from "@images/new/food.png";
 import nettoyage from "@images/new/nettoyage.png";
@@ -29,6 +30,7 @@ import tools from "@images/automated-tools.avif";
 import dashboard from "@images/dashboard-image.avif";
 import { getRelativeLocaleUrl } from "astro:i18n";
 import { partnersData } from "@/data_files/constants";
+import type { ImageMetadata } from "astro";
 
 const avatarSrcs: Array<string> = [
   "https://images.unsplash.com/photo-1568602471122-7832951cc4c5?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=facearea&facepad=2&w=300&h=300&q=80",
@@ -120,10 +122,9 @@ const avatarSrcs: Array<string> = [
       {
         content:
           "MAFA a repris la restauration et la logistique de notre base-vie en assurant une traçabilité rigoureuse. Leur présence terrain et leur réactivité font toute la différence pour nos équipes.",
-        author: "Seydou Kaboré",
+        author: "Mohamed Traoré",
         role: "Responsable logistique | Groupe minier sahélien",
-        avatarSrc:
-          "https://images.unsplash.com/photo-1593104547489-5cfb3839a3b5?q=80&w=1453&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D8&auto=format&fit=facearea&facepad=2&w=320&h=320&q=80",
+        avatarSrc: mohamed as ImageMetadata,
       },
     ]}
     statistics={[
