--- a/src/components/sections/navbar&footer/FooterSection.astro
+++ b/src/components/sections/navbar&footer/FooterSection.astro
@@ -17,7 +17,7 @@ const sectionThreeContent: string = Astro.currentLocale === "fr" ? "Restez infor
   "Stay updated with the latest tools and exclusive deals.";
 ---
 
-<footer class="w-full bg-neutral-300 dark:bg-neutral-900">
+<footer class="relative z-10 w-full bg-neutral-300/90 dark:bg-neutral-900/90 backdrop-blur-sm">
   <div
     class="mx-auto w-full max-w-[85rem] px-4 py-10 sm:px-6 lg:px-16 lg:pt-20 2xl:max-w-(--breakpoint-2xl)"
   >
